--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -2,7 +2,7 @@
     <form class="login-form frame-spaces">
         <div class="row ">
             <div class="twelve columns container">
-                <img class="logo" src="../resources/Logo-Agripa.png"/>
+                <img  class="img-responsive center-block" src="../resources/Logo-Agripa.png"/>
                 <h4 class="text-center">Cadastro concluído com sucesso</h4>
                 <h4 class="text-center">O que deseja fazer agora?</h4><br/>
 
